# backend/weather/views.py
@@ -415,6 +415,12 @@ class TemperatureDeviationOverviewAPIView(APIView):
                     "deviation_max": params.get("deviation_max"),
                     "alt_min": params.get("alt_min"),
                     "alt_max": params.get("alt_max"),
+                    "classe_recente_min": params.get("classe_recente_min"),
+                    "classe_recente_max": params.get("classe_recente_max"),
+                    "date_de_creation_min": params.get("date_de_creation_min"),
+                    "date_de_creation_max": params.get("date_de_creation_max"),
+                    "date_de_fermeture_min": params.get("date_de_fermeture_min"),
+                    "date_de_fermeture_max": params.get("date_de_fermeture_max"),
                     "departments": list(params.get("departments", ())),
                     "regions": list(params.get("regions", ())),
                 },
